increased number of image boxes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
       <aside>
         <h2>SIDEBAR</h2>
-        <div class="sample-img">Image</div>
+        <div class="image">Image</div>
         <p>
           SIDEBAR TEXT
         </p>
@@ -31,7 +31,23 @@
 
       <section>
         <h2>BODY</h2>
-        <div class="sample-img">Image</div>
+        <div class="image">Image</div>
+        <p>
+          BODY TEXT
+        </p>
+        <div class="image">Image</div>
+        <p>
+          BODY TEXT
+        </p>
+        <div class="image">Image</div>
+        <p>
+          BODY TEXT
+        </p>
+        <div class="image">Image</div>
+        <p>
+          BODY TEXT
+        </p>
+        <div class="image">Image</div>
         <p>
           BODY TEXT
         </p>
