--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </section>
       <section>
         <aside>
-          <h2>Products</h2>
+          <h2>Work</h2>
           <!-- <div class="">Image</div> -->
           <p>SIDEBAR TEXT</p>
         </aside>
